# cli

./: Microsoft.DotNet.Cli.sln  NuGet.Config  build.cmd  build.sh  dotnet.sln  global.json  install.ps1
dotnet/: Bootstrapper.cs  IBootstrapper.cs  Program.cs  TestDotnetCommandDiscovery.cs  dotnet-core.csproj  dotnet.csproj  project.json  project.lock.json
dotnet-lib/: Bootstrapper.cs  FindPaths.cs  IBootstrapper.cs  IProcessStarter.cs  ProcessStarter.cs  dotnet-lib.csproj  project.json  project.lock.json
dotnet-lib/Properties/: AssemblyInfo.cs
dotnet-test/: TestCommandDiscovery.cs  dotnet-test.csproj  dotnet-test.nuget.props  project.json  project.lock.json
dotnet-test/Properties/: AssemblyInfo.cs
dotnet/Properties/: AssemblyInfo.cs
dotnet/dotnet-core/: dotnet-core.csproj  project.json
dotnet/test/: TestDotnetCommandDiscovery.cs
packaging/osx/: package-osx.sh
packaging/windows/: generatemsi.ps1
scripts/: bootstrap.cmd  bootstrap.sh  build.ps1  ci_build.sh  cmake-gen.cmd  cmake-gen.sh  dockerbuild.sh
scripts/Microsoft.DotNet.Cli.Build.Framework/: BuildContext.cs  BuildFailureException.cs  BuildSetup.cs  BuildTargetContext.cs  Command.cs  (+4 more)
src/clrhost/: CMakeLists.txt  Makefile  host.cpp  host.h  main.cpp  pal.cpp  pal.h  tpafile.cpp  tpafile.h  trace.h
src/clrhost/clrhost.shared/: args.cpp  host.cpp  main.cpp  pal.cpp  pal.h  tpafile.cpp  tpafile.h
src/clrhost/clrhost.unix/: corerun.cpp  coreruncommon.cpp
src/clrhost/inc/: args.h  pal.h  tpafile.h
src/clrhost/src/: args.cpp  host.cpp  main.cpp  pal.posix.cpp  pal.windows.cpp  tpafile.cpp
(+141 files in other folders)
